--- a/package.json
+++ b/package.json
@@ -26,14 +26,20 @@
 		"@anthropic-ai/sdk": "^0.60.0",
 		"@elysiajs/cors": "^1.3.3",
 		"@elysiajs/swagger": "github:gsbenevides2/elysia-swagger",
+		"@google-cloud/speech": "^7.2.0",
+		"@google-cloud/storage": "^7.17.0",
 		"@grotto/logysia": "^0.1.6",
+		"@types/sharp": "^0.32.0",
 		"@web-bee-ru/openapi-axios": "^0.0.6",
 		"axios": "^1.11.0",
-		"elysia": "latest"
+		"elysia": "latest",
+		"sharp": "^0.34.3",
+		"tmp": "^0.2.5"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.1.3",
 		"@commitlint/config-conventional": "^19.8.1",
+		"@types/tmp": "^0.2.6",
 		"bun-types": "latest",
 		"husky": "^9.1.7",
 		"openapi-typescript": "^7.9.1"
